correcao da mesa

--- a/aula-11/mesa-de-trabalho/index.html
+++ b/aula-11/mesa-de-trabalho/index.html
@@ -13,12 +13,12 @@
 
         <div>
             <label for="nome">Nome: </label>
-            <input type="text" id="nome" placeholder="Insira seu nome" value="Ediane">
+            <input type="text" id="nome" placeholder="Insira seu nome">
         </div>
 
         <div>
             <label for="sobrenome">Sobrenome: </label>
-            <input type="text" id="sobrenome" placeholder="Insira seu sobrenome" value="Rocha">
+            <input type="text" id="sobrenome" placeholder="Insira seu sobrenome">
         </div>
 
         <div class="button">
